# principles-and-practice-cpp

./: .gitignore  CMakeLists.txt  README.md
chapter_2/: CMakeLists.txt  hello_world.cpp
include/: std_lib_facilities.h
